--- a/index.html
+++ b/index.html
@@ -4,6 +4,101 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tribute</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1 id="heading">Good Vibes Form</h1>
+    <div class="container">
+      <p id="sec-heading">
+        Tell us something positive that happened to you today
+      </p>
+      <form action="">
+        <div class="row">
+          <label for="">Name</label>
+          <div class="field">
+            <input
+              type="text"
+              class="input-fields"
+              placeholder="Enter your name"
+              required
+            />
+          </div>
+        </div>
+        <div class="row">
+          <label for="">Email</label>
+          <div class="field">
+            <input
+              type="email"
+              class="input-fields"
+              placeholder="Enter your email"
+              required
+            />
+          </div>
+        </div>
+
+        <div class="row">
+          <label id="scaleof" for=""
+            >On a scale of 1-10, how good was it?
+          </label>
+          <div class="field">
+            <input
+              type="number"
+              class="input-fields"
+              placeholder="Enter a number"
+            />
+          </div>
+        </div>
+
+        <div class="row">
+          <label for="">Where did it happen</label>
+          <div class="field">
+            <select name="" id="" class="input-select-field">
+              <option value="">At home</option>
+              <option value="">On my commute</option>
+              <option value="">At work</option>
+              <option value="">On the street</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="row">
+          <label for="">At what time of day did it happen</label>
+          <div class="field">
+            <input type="radio" />Morning <br /><input
+              type="radio"
+            />Afternoon<br />
+            <input type="radio" />Evening
+          </div>
+        </div>
+
+        <div class="row">
+          <label for=""
+            >What emotions do you experience(Select all that apply)</label
+          >
+          <div class="field">
+            <input type="checkbox" /> Excited <br /><input type="checkbox" />
+            Humbled<br />
+            <input type="checkbox" /> Elated <br /><input type="checkbox" />
+            Loved<br />
+            <input type="checkbox" /> Enthusiastic<br />
+          </div>
+        </div>
+
+        <div class="row">
+          <label for="">Please describle your positive experience</label>
+          <div class="field">
+            <textarea
+              name=""
+              id="textarea"
+              cols="30"
+              rows="10"
+              placeholder="Type out a message"
+            ></textarea>
+          </div>
+        </div>
+
+        <button>Submit</button>
+      </form>
+    </div>
+  </body>
 </html>
